--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <title>Büşra İnan | Portfolio</title>
@@ -7,55 +7,97 @@
 </head>
 <body>
 
-    <header>
-        <h1>Büşra İnan</h1>
-        <p>Computer Engineering Student | AI & ML | Full-Stack Developer</p>
-    </header>
+<header class="hero">
+    <h1>Büşra İnan</h1>
+    <p>Computer Engineering Student | AI & ML | Full-Stack Developer</p>
+    <div class="contact-top">
+        <span>📧 busra.inann37@gmail.com</span>
+        <span>📍 İstanbul</span>
+        <a href="https://www.linkedin.com/in/busra-inan-b977ab353/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/busrainn" target="_blank">GitHub</a>
+    </div>
+</header>
 
-    <section>
-        <h2>About Me</h2>
-        <p>
-            I am a computer engineering student focused on artificial intelligence,
-            machine learning, and full-stack web development. I build end-to-end systems
-            that combine data, models, and user-friendly interfaces.
-        </p>
-    </section>
+<section class="card">
+    <h2>👩‍💻 Profile</h2>
+    <p>
+        Yapay zekâ ve makine öğrenimi odaklı, full-stack web teknolojileri ile uçtan uca sistem entegrasyonu
+        geliştiren bilgisayar mühendisliği öğrencisiyim. Karaciğer fibrozisi evre tespiti üzerine yaptığım yaz stajında
+        veri analizi, makine öğrenimi modelleme ve web tabanlı sistem entegrasyonu süreçlerinde aktif rol aldım.
+        Araştırma grubunda Unity ve VR projelerinde mentörlük yaparak teknik liderlik ve ekip yönetimi deneyimi kazandım.
+    </p>
+</section>
 
-    <section>
-        <h2>Projects</h2>
+<section class="card">
+    <h2>🎓 Education</h2>
+    <p><b>İstanbul Sağlık ve Teknoloji Üniversitesi</b><br>
+    Bilgisayar Mühendisliği (Lisans) | 2023 – 2027 (Beklenen)<br>
+    GPA: 3.18 / 4.00</p>
 
-        <div class="project">
-            <h3>Liver Fibrosis Detection System</h3>
-            <p>Machine learning models to predict F0–F4 liver fibrosis stages. Built with Python, Scikit-learn, Flask API, and React frontend.</p>
-        </div>
+    <p><b>Doktor Vasıf Topçu Fen Lisesi</b><br>
+    2019 – 2023</p>
+</section>
 
-        <div class="project">
-            <h3>Fleet Management System</h3>
-            <p>Full-stack fleet tracking system with JWT authentication, role-based access, and REST API architecture.</p>
-        </div>
+<section class="card">
+    <h2>🛠 Technical Skills</h2>
+    <div class="skills">
+        <div><b>AI / ML:</b> Random Forest, XGBoost, Logistic Regression, CNN, LLM & VLM Integration</div>
+        <div><b>Languages:</b> Python, JavaScript, Java, C, C++, SQL</div>
+        <div><b>Web:</b> React, Node.js, Express, Flask, REST APIs</div>
+        <div><b>Database:</b> MySQL</div>
+        <div><b>Tools:</b> Git, GitHub, Unity, VS Code</div>
+    </div>
+</section>
 
-        <div class="project">
-            <h3>AI Calorie Estimation App</h3>
-            <p>Computer vision system that estimates calories from food images using deep learning techniques.</p>
-        </div>
+<section class="card">
+    <h2>💼 Experience</h2>
 
-        <div class="project">
-            <h3>VR AI Avatar System</h3>
-            <p>Interactive VR avatar with AI chatbot, speech-to-text and text-to-speech integration in Unity.</p>
-        </div>
+    <h3>AI / Data Analysis Intern – Liver Fibrosis Project (2025)</h3>
+    <ul>
+        <li>F0–F4 fibrozis evre tespiti için ML sınıflandırma modelleri geliştirdim</li>
+        <li>Veri ön işleme, eğitim-test ayrımı ve performans analizi yaptım</li>
+        <li>Random Forest, XGBoost, Logistic Regression karşılaştırmaları</li>
+        <li>LLM & VLM entegrasyon süreçlerinde görev aldım</li>
+        <li>React + Flask API ile uçtan uca sistem geliştirdim</li>
+    </ul>
 
-    </section>
+    <h3>Unity / VR Research Group Mentor (2025 – Devam)</h3>
+    <ul>
+        <li>Unity ve VR geliştirme süreçlerinde mentörlük</li>
+        <li>Etkileşimli UI ve karakter animasyon sistemleri</li>
+        <li>STT/TTS sesli etkileşim entegrasyonu</li>
+        <li>AI chatbot entegrasyonu ile kullanıcı deneyimi geliştirme</li>
+    </ul>
+</section>
 
-    <section>
-        <h2>Contact</h2>
-        <p>Email: busra.inann37@gmail.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/busra-inan-b977ab353/" target="_blank">My Profile</a></p>
-        <p>GitHub: <a href="https://github.com/busrainn" target="_blank">github.com/busrainn</a></p>
-    </section>
+<section class="card">
+    <h2>🚀 Projects</h2>
 
-    <footer>
-        <p>© 2026 Büşra İnan</p>
-    </footer>
+    <div class="project">
+        <h3>Fleet Management System (FleetTrack)</h3>
+        <p>Full-stack fleet tracking system with JWT authentication and role-based access.</p>
+        <a href="https://github.com/busrainn/fleet-management-system" target="_blank">🔗 View on GitHub</a>
+    </div>
+
+    <div class="project">
+        <h3>AI Calorie Estimation App</h3>
+        <p>Deep learning based food recognition and calorie estimation system.</p>
+    </div>
+
+    <div class="project">
+        <h3>Liver Fibrosis Detection System</h3>
+        <p>Machine learning models predicting F0–F4 fibrosis stages with web integration.</p>
+    </div>
+
+    <div class="project">
+        <h3>VR AI Avatar System</h3>
+        <p>Interactive AI-powered VR avatar with voice interaction and chatbot integration.</p>
+    </div>
+</section>
+
+<footer>
+    <p>© 2026 Büşra İnan</p>
+</footer>
 
 </body>
 </html>
