--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <header class="hero">
     <h1>Büşra İnan</h1>
-    <p>Computer Engineering Student | AI & ML | Full-Stack Developer</p>
+    <p>
+        Computer Engineering Student • AI & Machine Learning • Full-Stack Developer<br>
+        Building intelligent, scalable and user-focused systems
+    </p>
+
     <div class="contact-top">
         <span>📧 busra.inann37@gmail.com</span>
         <span>📍 İstanbul</span>
@@ -21,31 +25,51 @@
 <section class="card">
     <h2>👩‍💻 Profile</h2>
     <p>
-        Yapay zekâ ve makine öğrenimi odaklı, full-stack web teknolojileri ile uçtan uca sistem entegrasyonu
-        geliştiren bilgisayar mühendisliği öğrencisiyim. Karaciğer fibrozisi evre tespiti üzerine yaptığım yaz stajında
-        veri analizi, makine öğrenimi modelleme ve web tabanlı sistem entegrasyonu süreçlerinde aktif rol aldım.
-        Araştırma grubunda Unity ve VR projelerinde mentörlük yaparak teknik liderlik ve ekip yönetimi deneyimi kazandım.
+        I am a Computer Engineering student focused on Artificial Intelligence, Machine Learning,
+        and full-stack web development. I have hands-on experience in developing end-to-end
+        AI-powered systems, including data analysis, machine learning model development,
+        and web-based deployment.
+        <br><br>
+        During my internship, I worked on liver fibrosis stage detection (F0–F4) using machine
+        learning models and integrated them into a React–Flask web platform.
+        I also gained leadership experience by mentoring students in Unity and VR-based research projects.
     </p>
 </section>
 
 <section class="card">
     <h2>🎓 Education</h2>
-    <p><b>İstanbul Sağlık ve Teknoloji Üniversitesi</b><br>
-    Bilgisayar Mühendisliği (Lisans) | 2023 – 2027 (Beklenen)<br>
-    GPA: 3.18 / 4.00</p>
+    <p>
+        <b>İstanbul Sağlık ve Teknoloji Üniversitesi</b><br>
+        Computer Engineering (B.Sc.) | 2023 – 2027 (Expected)<br>
+        GPA: 3.18 / 4.00
+    </p>
 
-    <p><b>Doktor Vasıf Topçu Fen Lisesi</b><br>
-    2019 – 2023</p>
+    <p>
+        <b>Doktor Vasıf Topçu Science High School</b><br>
+        2019 – 2023
+    </p>
 </section>
 
 <section class="card">
     <h2>🛠 Technical Skills</h2>
-    <div class="skills">
-        <div><b>AI / ML:</b> Random Forest, XGBoost, Logistic Regression, CNN, LLM & VLM Integration</div>
-        <div><b>Languages:</b> Python, JavaScript, Java, C, C++, SQL</div>
-        <div><b>Web:</b> React, Node.js, Express, Flask, REST APIs</div>
-        <div><b>Database:</b> MySQL</div>
-        <div><b>Tools:</b> Git, GitHub, Unity, VS Code</div>
+    <div class="skill-tags">
+        <span>Python</span>
+        <span>Machine Learning</span>
+        <span>Random Forest</span>
+        <span>XGBoost</span>
+        <span>Logistic Regression</span>
+        <span>CNN</span>
+        <span>LLM / VLM</span>
+        <span>React</span>
+        <span>Node.js</span>
+        <span>Express</span>
+        <span>Flask</span>
+        <span>REST API</span>
+        <span>MySQL</span>
+        <span>JWT</span>
+        <span>Unity</span>
+        <span>VR</span>
+        <span>Git & GitHub</span>
     </div>
 </section>
 
@@ -54,19 +78,19 @@
 
     <h3>AI / Data Analysis Intern – Liver Fibrosis Project (2025)</h3>
     <ul>
-        <li>F0–F4 fibrozis evre tespiti için ML sınıflandırma modelleri geliştirdim</li>
-        <li>Veri ön işleme, eğitim-test ayrımı ve performans analizi yaptım</li>
-        <li>Random Forest, XGBoost, Logistic Regression karşılaştırmaları</li>
-        <li>LLM & VLM entegrasyon süreçlerinde görev aldım</li>
-        <li>React + Flask API ile uçtan uca sistem geliştirdim</li>
+        <li>Developed ML classification models for F0–F4 liver fibrosis stage detection</li>
+        <li>Performed data preprocessing, train-test split and model evaluation</li>
+        <li>Compared Random Forest, XGBoost and Logistic Regression models</li>
+        <li>Contributed to LLM and VLM integration processes</li>
+        <li>Built an end-to-end system using React and Flask API</li>
     </ul>
 
-    <h3>Unity / VR Research Group Mentor (2025 – Devam)</h3>
+    <h3>Unity / VR Research Group Mentor (2025 – Present)</h3>
     <ul>
-        <li>Unity ve VR geliştirme süreçlerinde mentörlük</li>
-        <li>Etkileşimli UI ve karakter animasyon sistemleri</li>
-        <li>STT/TTS sesli etkileşim entegrasyonu</li>
-        <li>AI chatbot entegrasyonu ile kullanıcı deneyimi geliştirme</li>
+        <li>Mentored students in Unity and VR development processes</li>
+        <li>Designed interactive VR UI and character animation systems</li>
+        <li>Integrated STT/TTS based voice interaction</li>
+        <li>Enhanced UX with AI-powered chatbot integration</li>
     </ul>
 </section>
 
@@ -74,24 +98,42 @@
     <h2>🚀 Projects</h2>
 
     <div class="project">
-        <h3>Fleet Management System (FleetTrack)</h3>
-        <p>Full-stack fleet tracking system with JWT authentication and role-based access.</p>
-        <a href="https://github.com/busrainn/fleet-management-system" target="_blank">🔗 View on GitHub</a>
+        <h3>FleetTrack – Vehicle Fleet Management System</h3>
+        <p>
+            Role-based full-stack fleet management system for vehicle tracking,
+            maintenance planning and driver performance monitoring.
+        </p>
+        <p class="tech">React • Node.js • Express • MySQL • JWT • REST API</p>
+        <a href="https://github.com/busrainn/fleet-management-system" target="_blank">
+            🔗 View on GitHub
+        </a>
     </div>
 
     <div class="project">
-        <h3>AI Calorie Estimation App</h3>
-        <p>Deep learning based food recognition and calorie estimation system.</p>
+        <h3>AI-Based Calorie Estimation App</h3>
+        <p>
+            Deep learning-based food recognition and calorie estimation system
+            with daily intake and macro-nutrient tracking.
+        </p>
+        <p class="tech">Python • CNN • Image Processing • MySQL</p>
     </div>
 
     <div class="project">
         <h3>Liver Fibrosis Detection System</h3>
-        <p>Machine learning models predicting F0–F4 fibrosis stages with web integration.</p>
+        <p>
+            Machine learning models predicting liver fibrosis stages (F0–F4)
+            with web-based deployment.
+        </p>
+        <p class="tech">Python • Random Forest • XGBoost • Flask • React</p>
     </div>
 
     <div class="project">
         <h3>VR AI Avatar System</h3>
-        <p>Interactive AI-powered VR avatar with voice interaction and chatbot integration.</p>
+        <p>
+            Interactive AI-powered VR avatar with voice interaction
+            and chatbot integration.
+        </p>
+        <p class="tech">Unity • VR • STT / TTS • AI Chatbot</p>
     </div>
 </section>
 
