Enhance 'About Me' and project descriptions in index.html
Updated the 'About Me' section to emphasize specialization in AI and ML, and refined project descriptions for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -27,77 +27,109 @@
     <h2>About Me</h2>
     <p>
         Hi, I’m Büşra 👋  
-        I’m a Computer Engineering student with a strong interest in Artificial Intelligence,
-        Machine Learning, and full-stack system development.
+        I’m a Computer Engineering student specializing in <b>Artificial Intelligence,
+        Machine Learning, and end-to-end system development</b>.
         <br><br>
-        I enjoy working on real-world problems where data, models, and software architecture
-        come together. From building machine learning models for medical decision support
-        to developing scalable, role-based web systems, I focus on creating solutions that
-        are both technically solid and user-oriented.
+        My main focus is building <b>real-world AI solutions</b> where machine learning models
+        are not only trained, but also <b>deployed, integrated, and used</b> through scalable
+        backend services and user-friendly interfaces.
+        <br><br>
+        I have hands-on experience in <b>medical AI</b>, particularly in liver fibrosis
+        stage detection (F0–F4), where I worked on data preprocessing, model development,
+        evaluation, and full-stack deployment using Flask APIs and React-based interfaces.
+        <br><br>
+        In addition to AI, I actively contribute to <b>Unity & VR research projects</b>,
+        mentoring students and developing interactive systems enhanced with AI-driven
+        features such as speech interaction and chatbots.
+        <br><br>
+        I aim to grow as an <b>AI-focused engineer</b> who can transform complex data
+        and models into impactful, production-ready systems.
     </p>
 </section>
+
 
 <!-- PROJECTS -->
 <section class="section">
     <h2>Featured Projects</h2>
 
-    <div class="project">
+       <div class="project">
         <h3>FleetTrack — Vehicle Fleet Management System</h3>
         <p class="problem">
-            <b>Problem:</b> Managing vehicle fleets requires handling multiple user roles,
-            secure authentication, and scalable data structures.
+            <b>Problem:</b> Managing vehicle fleets requires secure authentication,
+            role-based access control, and scalable backend architecture.
         </p>
         <p>
-            <b>Solution:</b> I designed and developed a role-based full-stack fleet management
-            system with secure JWT authentication.
+            <b>Solution:</b> I designed and implemented a full-stack fleet management
+            system supporting multiple user roles with secure JWT-based authentication.
         </p>
         <ul>
-            <li>JWT-based authentication & authorization</li>
-            <li>RESTful API architecture</li>
-            <li>Admin, driver & technician dashboards</li>
-            <li>Relational database design</li>
+            <li>Role-based access (admin, driver, technician)</li>
+            <li>RESTful API architecture and relational database design</li>
+            <li>JWT authentication and secure password management</li>
+            <li>Scalable backend structure for multi-user environments</li>
         </ul>
-        <p class="tech">React • Node.js • Express • MySQL • JWT</p>
-        <a href="https://github.com/busrainn/fleet-management-system" target="_blank">
-            View on GitHub →
-        </a>
+        <p class="tech">
+            React • Node.js • Express • MySQL • JWT • REST API
+        </p>
+       <a class="github-btn" href="https://github.com/busrainn/fleet-management-system" target="_blank">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+        <path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.2c-3.2.7-3.9-1.4-3.9-1.4-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.2 1.7 1.2 1 1.7 2.7 1.2 3.3.9.1-.7.4-1.2.7-1.5-2.6-.3-5.4-1.3-5.4-5.9 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.5.1-3.1 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8.1 3.1.8.8 1.2 1.9 1.2 3.2 0 4.6-2.8 5.6-5.4 5.9.4.3.8 1 .8 2.1v3.1c0 .3.2.7.8.6A11.5 11.5 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/>
+    </svg>
+    <span>GitHub Repo</span>
+</a>
+
     </div>
 
-    <div class="project">
-        <h3>Liver Fibrosis Stage Detection System</h3>
-        <p class="problem">
-            <b>Problem:</b> Accurate detection of liver fibrosis stages (F0–F4) is critical
-            for clinical decision-making.
-        </p>
-        <p>
-            <b>Solution:</b> I developed machine learning models and integrated them into
-            a web-based decision support system.
-        </p>
-        <ul>
-            <li>Data preprocessing & feature analysis</li>
-            <li>Random Forest, XGBoost & Logistic Regression</li>
-            <li>Model evaluation and comparison</li>
-            <li>Flask API deployment</li>
-        </ul>
-        <p class="tech">Python • Scikit-learn • Flask • React</p>
-    </div>
+    <section class="section">
+    <h2>Featured Projects</h2>
 
     <div class="project">
-        <h3>AI-Based Calorie Estimation App</h3>
+        <h3>Liver Fibrosis Stage Detection System (Medical AI)</h3>
         <p class="problem">
-            <b>Problem:</b> Manual calorie tracking is time-consuming and often inaccurate.
+            <b>Problem:</b> Accurate staging of liver fibrosis (F0–F4) is critical for
+            early diagnosis and treatment planning, yet manual evaluation can be
+            time-consuming and subjective.
         </p>
         <p>
-            <b>Solution:</b> I built a deep learning-based system that recognizes food
-            from images and estimates calorie values.
+            <b>Solution:</b> I developed a machine learning–based clinical decision
+            support system that predicts fibrosis stages using laboratory data and
+            integrates the models into a web-based application.
         </p>
         <ul>
-            <li>CNN-based food recognition</li>
-            <li>Image preprocessing & data augmentation</li>
-            <li>Daily calorie & macro tracking</li>
+            <li>Data preprocessing, feature analysis, and class imbalance handling</li>
+            <li>Model development using Random Forest, XGBoost, and Logistic Regression</li>
+            <li>Model evaluation with accuracy and F1-score comparisons</li>
+            <li>Deployment via Flask API and integration with a React-based frontend</li>
+            <li>LLM & VLM integration for AI-assisted medical explanations</li>
         </ul>
-        <p class="tech">Python • CNN • Image Processing • MySQL</p>
+        <p class="tech">
+            Python • Scikit-learn • Flask • React • Machine Learning • Medical AI
+        </p>
     </div>
+
+<div class="project">
+    <h3>AI-Enhanced Virtual Reality Applications (Unity & VR)</h3>
+    <p class="problem">
+        <b>Problem:</b> Traditional learning and interaction systems lack immersion
+        and personalized user engagement.
+    </p>
+    <p>
+        <b>Solution:</b> I contributed to Unity-based VR research projects by developing
+        interactive environments enhanced with AI-driven features to improve user
+        experience and engagement.
+    </p>
+    <ul>
+        <li>Mentoring students in Unity and VR development processes</li>
+        <li>Design and implementation of interactive VR user interfaces</li>
+        <li>Character animation management and interaction logic</li>
+        <li>Integration of STT/TTS-based voice interaction systems</li>
+        <li>AI-powered chatbot integration within VR environments</li>
+    </ul>
+    <p class="tech">
+        Unity • C# • Virtual Reality • STT / TTS • AI Chatbots • Human-Computer Interaction
+    </p>
+</div>
+
 </section>
 
 <!-- SKILLS -->
