--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
 
     </div>
 
-    <section class="section">
     <h2>Featured Projects</h2>
 
     <div class="project">
@@ -133,8 +132,9 @@
 </section>
 
 <!-- SKILLS -->
+<h2 class="section-title">Skills</h2>
+
 <section class="section">
-    <h2>Skills</h2>
     <div class="skills">
         <span>Python</span>
         <span>Machine Learning</span>
@@ -152,6 +152,7 @@
         <span>VR</span>
     </div>
 </section>
+
 
 <!-- FOOTER -->
 <footer>
