--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
         AI & Machine Learning • Full-Stack Developer
     </p>
 
-    <div class="hero-links">
-        <a href="mailto:busra.inann37@gmail.com">Email</a>
-        <a href="https://github.com/busrainn" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/busra-inan-b977ab353/" target="_blank">LinkedIn</a>
-    </div>
+   <div class="hero-links">
+    <a href="mailto:busra.inann37@gmail.com">
+        📧 Email
+    </a>
+    <a href="https://github.com/busrainn" target="_blank">
+        💻 GitHub
+    </a>
+    <a href="https://www.linkedin.com/in/busra-inan-b977ab353/" target="_blank">
+        🔗 LinkedIn
+    </a>
+</div>
+
 </header>
 
 <!-- ABOUT -->
