--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
 </section>
 
 <!-- SKILLS -->
-<h2 class="section-title">Skills</h2>
-
 <section class="section">
+    <h2>Skills</h2>
     <div class="skills">
         <span>Python</span>
         <span>Machine Learning</span>
@@ -158,6 +157,7 @@
         <span>VR</span>
     </div>
 </section>
+
 
 
 <!-- FOOTER -->
