--- a/index.html
+++ b/index.html
@@ -15,17 +15,27 @@
         AI & Machine Learning • Full-Stack Developer
     </p>
 
-   <div class="hero-links">
+  <div class="hero-links">
     <a href="mailto:busra.inann37@gmail.com">
         📧 Email
     </a>
-    <a href="https://github.com/busrainn" target="_blank">
-        💻 GitHub
+
+    <a class="github-btn hero-github"
+       href="https://github.com/busrainn"
+       target="_blank">
+
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.2c-3.2.7-3.9-1.4-3.9-1.4-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.2 1.7 1.2 1 1.7 2.7 1.2 3.3.9.1-.7.4-1.2.7-1.5-2.6-.3-5.4-1.3-5.4-5.9 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.5.1-3.1 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8.1 3.1.8.8 1.2 1.9 1.2 3.2 0 4.6-2.8 5.6-5.4 5.9.4.3.8 1 .8 2.1v3.1c0 .3.2.7.8.6A11.5 11.5 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/>
+        </svg>
+
+        <span>GitHub</span>
     </a>
+
     <a href="https://www.linkedin.com/in/busra-inan-b977ab353/" target="_blank">
         🔗 LinkedIn
     </a>
 </div>
+
 
 </header>
 
